<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_app"
    tools:context="com.example.poli_gas.schedule_request.ScheduleRequestFragmentt">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cylinder_view"
        android:layout_width="75dp"
        android:layout_height="100dp"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:src="@drawable/bluetanqcard" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif"
        android:text="@string/quantity_cylinders"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/cylinder_view"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/quantity_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="116dp"
        android:layout_marginLeft="116dp"
        android:layout_marginTop="4dp"
        android:fontFamily="sans-serif"
        android:text="1"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/cylinder_view"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />


    <TextView
        android:id="@+id/delivery_date_text"
        android:layout_width="255dp"
        android:layout_height="42dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="143dp"
        android:background="@drawable/bg_textfield"
        android:hint="@string/date_hint"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />


    <Button
        android:id="@+id/datePickerButton"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/ic_date"
        app:layout_constraintStart_toEndOf="@+id/delivery_date_text"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="111dp"
        android:layout_marginRight="111dp"
        android:text="@string/date_message"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cylinder_view" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="122dp"
        android:layout_marginRight="122dp"
        android:text="@string/hour_message"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/delivery_date_text" />

    <TextView
        android:id="@+id/delivery_hour_text"
        android:layout_width="255dp"
        android:layout_height="42dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="133dp"
        android:background="@drawable/bg_textfield"
        android:hint="@string/hour_hint"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <Button
        android:id="@+id/timePickerButton"
        android:layout_width="48dp"
        android:layout_height="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/ic_hourglas"
        app:layout_constraintStart_toEndOf="@+id/delivery_hour_text"
        app:layout_constraintTop_toTopOf="@+id/delivery_hour_text" />

    <Button
        android:id="@+id/schedule_order_button"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="134dp"
        android:background="@drawable/bg_button"
        android:text="@string/schedule_request"
        android:textColor="@color/text_color"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>