<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@drawable/background_app"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    tools:context="com.example.poli_gas.MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="204dp"
        android:layout_height="310dp"
        android:layout_marginBottom="97dp"
        android:width="209sp"
        android:height="227sp"
        android:fontFamily="Andalus"
        android:gravity="center"
        android:lineSpacingMultiplier="1.5333333333333334"
        android:text="@string/welcome_msg"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:fontFamily="Andalus"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/app_name"
        android:textColor="@color/text_color"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="61dp"
        android:layout_marginBottom="94dp"
        android:background="@drawable/bg_button"
        android:fontFamily="Andalus"
        android:text="@string/begin_text"
        android:textColor="@color/text_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>